Fixed navlinks overflow problems

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -7,24 +7,30 @@
   background-color: transparent;
   position: -webkit-sticky;
   position: sticky;
-
   width: 100%;
   display: flex;
   justify-content: space-between;
   padding: 15px 75px;
   height: var(--navbar-height);
   z-index: 100;
-  overflow: hidden;
-
-  /* -webkit-backdrop-filter: blur(30px);
-    backdrop-filter: blur(30px); */
 }
+
+.navbar-blur {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -10;
+}
+
 
 .navbar::before,
 .navbar::after {
   content: "";
   position: absolute;
   top: 0;
+  -webkit-backdrop-filter: blur(12px);
   backdrop-filter: blur(12px);
   z-index: -2; /* behind navlinks */
   width: 30%;
@@ -144,9 +150,9 @@
 }
 
 @media (width < 900px) {
-  .navbar {
+  .navbar-blur {
+    -webkit-backdrop-filter: blur(12px);
     backdrop-filter: blur(12px);
-    overflow: visible;
   }
 
   .navbar::before,
