--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,6 @@
 body {
   display: flex;
   flex-direction: column;
-  overflow-x: hidden;
 
   margin: 0;
   padding: 0;
